--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_confirm.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_confirm.html
@@ -3,8 +3,13 @@
 {% load static from staticfiles %}
 
 {% block title %}Setting New password{% endblock %}
-{% block extra_head_scripts %}
-    <link rel="stylesheet" href="{% static 'aristotle_mdr/login.less'|compile %}" />
+
+{% block webpack_css_bundle %}
+  <link rel="stylesheet" type="text/css" href="{% static 'bundles/login.css' %}" />
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/login.js' %}"></script>
 {% endblock %}
 
 {% block content %}
