--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_wrapper.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_wrapper.html
@@ -7,9 +7,12 @@
 Create new {{ model_name }} - Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }} - {{ step_title }}
 {% endblock %}
 
-{% block extra_head_scripts %}
-    <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.wizard.less'|compile %}" />
-    <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle_search.less'|compile %}" />
+{% block webpack_css_bundle %}
+  <link rel="stylesheet" type="text/css" href="{% static 'bundles/wizard.css' %}" />
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/wizard.js' %}"></script>
 {% endblock %}
 
 {% block content %}
