--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/admin/base_site.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block extrahead %}
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'bundles/vendors.css' %}" />
     <script src="{% static 'bundles/vendors.js' %}" type="text/javascript"></script>
     <script src="{% static 'bundles/admin.js' %}" type="text/javascript"></script>
     {% include 'autocomplete_light/static.html' %}
