--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/discussions/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/discussions/base.html
@@ -5,9 +5,12 @@
 
 {% block title %}All Discussions{% endblock %}
 
-{% block extra_head_scripts %}
-    <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.dashboard.less'|compile %}" />
-    <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle_discussions.less'|compile %}" />
+{% block webpack_css_bundle %}
+  <link rel="stylesheet" type="text/css" href="{% static 'bundles/discussions.css' %}" />
+{% endblock %}
+
+{% block webpack_bundle %}
+  <script src="{% static 'bundles/discussions.js' %}"></script>
 {% endblock %}
 
 {% block sidebar %}
