--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
@@ -11,7 +11,10 @@
             CKEDITOR_BASEPATH="/static/ckeditor/ckeditor/";
         </script>
         <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+        <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+        {% comment %}
         <script src="{% static 'aristotle_mdr/aristotle.moveable.js' %}"></script>
+        {% endcomment %}
     {% endif %}
 
 {% endblock %}
