--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -5,8 +5,10 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 <![endif]-->
 
+{% comment %}
 {{ form.media }}
 {{ formset.media }}
+{% endcomment %}
 
 {% block extra_alwayson_scripts %}
 {% endblock %}
