Fix datetimepicker css, fully comment out form media for now

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base_ajax.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/base_ajax.html
@@ -24,7 +24,9 @@
 {% endblock %}
 
 {% block extra_head_scripts %}
+{% comment %}
 {{ form.media }}
+{% endcomment %}
 {% endblock %}
 
 {# Fixes to load and init scripts dynamically on bootstrap modals #}
