view history feature

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
@@ -381,7 +381,31 @@
                         <div></div>
                     {% endif %}
                     </div>
+                    <div>
                     {{ result.rendered_search_result|safe }}
+                    {% if result|is_concept %}
+                        {% if result.pk in recent_viewed.keys %}
+                            {% with stats=recent_viewed|get_item:result.pk %}
+                            <small>
+                                You've viewed this item 
+                                {% if stats.count > 9 %}
+                                    many times
+                                {% else %}
+                                    {{stats.count}}
+                                    time{{stats.count|pluralize}}
+                                {% endif %}
+                                in the last month.
+
+                                Last visit: {{stats.last_viewed}}
+                            </small>
+                            {% endwith %}
+                        {% endif %}
+                        <small>
+                            {{result.score}}
+                            {{result.boost}}
+                        </small>
+                    {% endif %}
+                    </div>
                 </li>
                 {% endif %}
             {% empty %}
