--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/recent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/recent.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "My Recent Actions" %}{% endblock %}
 {% block collapse-link%}<i class="fa fa-history fa-fw"></i> {% trans "My Recent Actions" %}</a>{% endblock %}
 {% block sidebar %}
-    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='recent' %}
+    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='profile' %}
 {% endblock %}
 
 {% block page %}
