--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
@@ -1,27 +1,17 @@
-{% load i18n %}
+{% load i18n aristotle_tags %}
 
 <ul class="nav nav-pills nav-stacked nav-collapse dashMenu">
     <li class="dashboard_link {% ifequal activeTab "home" %}active{% endifequal %}">
-        <div>
         <a class="main" href="{% url 'aristotle:userHome' %}">
-        <i class="fa fa-home fa-fw"></i> My Dashboard</a>
-        <a href="{% url 'aristotle:userEdit' %}">
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-square fa-stack-2x"></i>
-              <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
-            </span>
+        <i class="fa fa-home fa-fw"></i> My Dashboard
         </a>
-        </div>
     </li>
-        {% ifequal activeTab "edit" %}
-    <li class="">
-        <ul class="nav nav-pills nav-stacked nav-collapse dashSubMenu">
-            <li><a href="{% url 'password_change' %}">
-                <i class="fa fa-cog fa-fw"></i> {% trans 'Change password' %}
-            </a></li>
-        </ul>
+    <li class="dashboard_link {% ifequal activeTab "profile" %}active{% endifequal %}">
+        <a href="{% url 'aristotle:userProfile' %}">
+        <img style="margin-left:-25px; margin-right:3px" src="{{ request.user.profile.profile_picture_url }}" width="20px" alt="Profile Picture"></img>
+        {% trans "My Profile" %}
+        </a>
     </li>
-        {% endifequal %}
     <li {% ifequal activeTab "create_list" %}class="active"{% endifequal %}>
         <a href="{% url 'aristotle:create_list' %}">
         <i class="fa fa-plus fa-fw"></i> Create Metadata
