--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/self_invite.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/self_invite.html
@@ -1,15 +1,16 @@
 {% extends "aristotle_mdr/base.html" %}
 {% load static %}
 {% load compile_static %}
+{% load render_bundle from webpack_loader %}
 
 {% block title %}Signup{% endblock %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/login.css' %}" />
+  {% render_bundle 'login' 'css' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/login.js' %}"></script>
+  {% render_bundle 'login' 'js' %}
 {% endblock %}
 
 {% block content %}
