--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/dec_template_wrapper.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/dec_template_wrapper.html
@@ -1,17 +1,18 @@
 {% extends "aristotle_mdr/base.html" %}
 {% load compile_static i18n %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block title %}
 Create Data Element Concept - Step {{ wizard.steps.step1 }}: {{step_title}}
 {% endblock %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/wizard.css' %}" />
+  {% render_bundle 'wizard' 'css' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/wizard.js' %}"></script>
+  {% render_bundle 'wizard' 'js' %}
 {% endblock %}
 
 {% block head %}
