--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/base.html
@@ -1,13 +1,14 @@
 {% extends request.is_ajax|yesno:"aristotle_mdr/base_ajax.html,aristotle_mdr/base.html" %}
 {% load i18n static compile_static %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/help.css' %}" />
+  {% render_bundle 'help' 'css' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/help.js' %}"></script>
+  {% render_bundle 'help' 'js' %}
 {% endblock %}
 
 {% block content %}
