--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_0_base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_0_base.html
@@ -1,13 +1,14 @@
 {% extends 'aristotle_mdr/base.html' %}
 {% load compile_static i18n util_tags %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/wizard.css' %}" />
+  {% render_bundle 'wizard' 'css' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/wizard.js' %}"></script>
+  {% render_bundle 'wizard' 'js' %}
 {% endblock %}
 
 {% block title %}{% endblock %}
