--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_wrapper.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_wrapper.html
@@ -2,17 +2,18 @@
 {% load compile_static %}
 {% load i18n %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block title %}
 Create new {{ model_name }} - Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }} - {{ step_title }}
 {% endblock %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/wizard.css' %}" />
+  {% render_bundle 'wizard' 'css' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/wizard.js' %}"></script>
+  {% render_bundle 'wizard' 'js' %}
 {% endblock %}
 
 {% block content %}
