Fix bundle load on pw reset

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_done.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_reset_done.html
@@ -1,15 +1,16 @@
 {% extends "aristotle_mdr/base.html" %}
 {% load compile_static %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 
 {% block title %}Password reset successful{% endblock %}
 
 {% block webpack_css_bundle %}
-  <link rel="stylesheet" type="text/css" href="{% static 'bundles/login.css' %}" />
+  {% render_bundle 'login' 'js' %}
 {% endblock %}
 
 {% block webpack_bundle %}
-  <script src="{% static 'bundles/login.js' %}"></script>
+  {% render_bundle 'login' 'css' %}
 {% endblock %}
 
 {% block content %}
