flake fixes, add tests

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
@@ -391,8 +391,7 @@
                                 {% if stats.count > 9 %}
                                     many times
                                 {% else %}
-                                    {{stats.count}}
-                                    time{{stats.count|pluralize}}
+                                    {{stats.count}} time{{stats.count|pluralize}}
                                 {% endif %}
                                 in the last month.
 
