--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userRoles.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userRoles.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='roles' %}
+    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='profile' %}
 {% endblock %}
 
 {% block page %}
