Migrate moveable to webapack

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/identifiers/templates/aristotle_mdr/identifiers/identifiers_editor_tab.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/identifiers/templates/aristotle_mdr/identifiers/identifiers_editor_tab.html
@@ -36,7 +36,7 @@
     {% endfor %}
     </tbody>
     </table>
-    <a class="btn btn-primary" onclick="addIdent()">
+    <a class="btn btn-primary add_code_button" formid="identifiers">
         <i class="fa fa-plus-circle"></i> Add a identifier</a>
 
 {% endwith %}
