--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/slots/templates/aristotle_mdr/slots/slots_editor_tab.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/slots/templates/aristotle_mdr/slots/slots_editor_tab.html
@@ -37,7 +37,7 @@
     {% endfor %}
     </tbody>
     </table>
-    <a class="btn btn-primary" onclick="addSlot()">
+    <a class="btn btn-primary add_code_button" formid="slots">
         <i class="fa fa-plus-circle"></i> Add a slot</a>
 
 {% endwith %}
